--- a/Style.css
+++ b/Style.css
@@ -10,56 +10,127 @@ a {
 
 .block {
     font-family: 'Inter', sans-serif;
+    display: flex;
+    justify-content: center;
+}
+
+path {
+    fill: rgba(0, 0, 0, 0.774);
+}
+
+.crosshair1 {
+    border-radius: 5px;
+    right: 850px;
+    position: relative;
+    top: 10px;
 }
 
 /* Background */
 
-.back {
-    width: auto;
-    height: 990px;
-    display: flex;
-    justify-content: center;
-    position: sticky;
-    z-index: 1;
-    transition:  1.1s cubic-bezier(0.23, 1, 0.32, 1) 0s;
-}
-
 .image {
-    position: relative;
-    left: 100px;
-    transition:  1.1s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+    position: absolute;
+    left: 400px;
+    top: 100px;
+    width: auto;
+    height: 940px;
+    z-index: 1;
 }
 
-.Horborder {
+.hborder {
     width: 1900px;
     height: 5px;
-    background: linear-gradient(45deg, #0baffe, #f2f5ff);
+    background: linear-gradient(45deg, #ffffff, #000000);
     position: absolute;
-    top: 900px;
-    z-index: -1;
+    top: 920px;
 }
 
-.Verborder {
+.vborder {
     width: 5px;
     height: 1000px;
-    background: linear-gradient(45deg, #f2f5ff, #0baffe);
+    background: linear-gradient(45deg, #000000, #ffffff);
     position: absolute;
-    right: 60px;
-    z-index: -1;
+    right: 45px;
 }
 
 .heart {
     rotate: 45deg;
     position: relative;
-    top: 20px;
-    right: 804px;
+    top: 450px;
+    left: 700px;
 }
 
-path {
-    fill: rgba(24, 144, 255, 0.774);
+.active {
+    rotate: 270deg;
+    font-size: 40px;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background: linear-gradient(270deg, #000000, #858585);
+    background-clip: text;
+    position: absolute;
+    left: 1725px;
+    top: 500px;
+    white-space: nowrap;
+}
+
+.Title {
+    font-weight: bold;
+    font-size: 350px;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background: linear-gradient(45deg, #000000, #e4e4e4);
+    background-clip: text;
+    position: absolute;
+    top: 100px;
+    z-index: -1;
+    right: 735px;
+}
+
+.points {
+    position: absolute;
+    z-index: -1;
+    right: 1500px;
+    top: 440px;
+    width: 200px;
+    height: auto;
 }
 
 /* Project list */
+
+.Project {
+    position: absolute;
+    display: flex;
+    right: 230px;
+    top: 170px;
+}
+
+.proUI {
+    background: rgb(240, 240, 240);
+    width: 200px;
+    height: 100px;
+    position: relative;
+    bottom: 0px;
+    border-radius: 10px;
+    box-shadow: 5px 5px rgba(119, 119, 119, 0.596);
+    padding: 5px 20px;
+    left: 45px;
+}
+
+.projects {
+    font-family: 'Bebas Neue';
+    font-size: 60px;
+    position: relative;
+    bottom: 120px;
+    left: 320px;
+    letter-spacing: 2px;
+    color: #000000;
+}
+
+.visual {
+    font-family: 'ubuntu';
+    position: relative;
+    bottom: 5px;
+    color: #000000;
+}
 
 .crosshair {
     border-radius: 5px;
@@ -67,56 +138,20 @@ path {
     position: relative;
 }
 
-.Projects {
-    position: absolute;
-    display: flex;
-    right: 1150px;
-    top: 100px;
-}
-
-.ProUI {
-    background: rgb(240, 240, 240);
-    width: 200px;
-    height: 100px;
-    position: relative;
-    bottom: 0px;
-    border-radius: 10px;
-    box-shadow: 5px 5px rgba(115, 204, 255, 0.596);
-    padding: 5px 20px;
-    left: 45px;
-}
-
-.TitlePro {
-    font-family: 'Bebas Neue';
-    font-size: 60px;
-    position: relative;
-    bottom: 120px;
-    left: 320px;
-    letter-spacing: 2px;
-    color: #0baffe;
-}
-
-.Visual {
-    font-family: 'ubuntu';
-    position: relative;
-    bottom: 5px;
-    color: #0baffe;
-}
-
 /* Media list */
 
-.UI {
+.Media {
     background-color: rgb(240, 240, 240);
     width: 50px;
     height: 262px;
     padding: 10px 10px;
     position: absolute;
-    box-shadow: 10px 10px rgba(115, 204, 255, 0.596);
+    box-shadow: 10px 10px rgba(119, 119, 119, 0.596);
     border-radius: 100px;
     font-family: ubuntu;
     font-size: 14px;
-    right: 100px;
     top: 100px;
+    right: 80px;
 }
 
 .Share {
@@ -141,47 +176,17 @@ path {
     top: 37px;
 }
 
-.crosshair1 {
-    border-radius: 5px;
-    left: 560px;
-    position: relative;
-    top: 10px;
-}
-
-/* Blue Archive TITLE */
-
-.Hoshino {
-    font-weight: bold;
-    font-size: 350px;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background: linear-gradient(45deg, #0baffe, #e8ecff);
-    background-clip: text;
-    position: absolute;
-    top: 100px;
-    z-index: -1;
-    right: 600px;
-}
-
-.points {
-    position: absolute;
-    z-index: -1;
-    right: 1350px;
-    top: 480px;
-    width: 200px;
-    height: auto;
-}
-
 /* Photo list*/
 
-.UX {
+.Photo {
     background-color: rgb(240, 240, 240);
     width: 300px;
     height: 100px;
     position: absolute;
-    top: 30px;
+    top: 340px;
     border-radius: 50px;
-    left: 100px;
+    right: 200px;
+    box-shadow: 5px 5px rgba(119, 119, 119, 0.596);
 }
 
 .circleplus {
@@ -191,14 +196,14 @@ path {
 }
 
 .circle {
-    fill: rgb(199, 199, 199);
+    fill: rgb(110, 110, 110);
 }
 
 .icon1 {
     width: 80px;
     height: 80px;
     border-radius: 50%;
-    border: 5px solid rgb(199, 199, 199);
+    border: 5px solid rgb(110, 110, 110);
     position: relative;
     top: 5px;
     left: 10px;
@@ -208,20 +213,44 @@ path {
     width: 80px;
     height: 80px;
     border-radius: 50%;
-    border: 5px solid rgb(199, 199, 199);
+    border: 5px solid rgb(110, 110, 110);
     position: relative;
     top: 5px;
     right: 180px;
 }
 
+/* Music player */
+.Music {
+    width: 180px;
+    height: 100px;
+    background-color: rgb(48, 48, 48);
+    border-radius: 100px;
+    position: absolute;
+    right: 580px;
+    top: 330px;
+}
+
+.Play {
+    width: 210px;
+    height: auto;
+    position: relative;
+    bottom: 130px;
+    right: 10px;
+}
+
 /* Video list */
 
 .Video {
-    background-color: rgb(240, 240, 240);
     position: absolute;
-    width: 600px;
-    height: 325px;
-    right: 100px;
+    right: 10px;
+    display: none;
+}
+
+.vidiv {
+    background-color: rgb(240, 240, 240);
+    position: relative;
+    width: 400px;
+    height: auto;
     top: 500px;
     padding: 10px 10px;
     border-radius: 10px;
@@ -229,8 +258,167 @@ path {
 }
 
 .video_media {
-    width: 600px;
+    width: 400px;
     height: auto;
-    position: absolute;
+    position: relative;
     border-radius: 10px;
+}
+
+/* Navigation */
+
+.topnav {
+    overflow: hidden;
+    background-color: #fdfdfd;
+    border: 1px solid#c0c0c0;
+    padding: .5rem 12% ;
+    font-family: ubuntu;
+  }
+
+.Rivi {
+    float: left;
+    display: block;
+    color: #000000;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 6px 16px;
+    margin-left: 10px;
+    font-weight: 600;
+}
+
+  .nav {
+    float: right;
+    display: block;
+    color: #000000;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 6px 16px;
+    margin-left: 10px;
+  }
+  
+  .topnav a:hover {
+    color: rgba(99, 99, 99, 0.808);
+  }
+  
+  .topnav .icon {
+    display: none;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
+
+
+
+/* Profile */
+
+.Profile {
+    background-color: rgb(240, 240, 240);
+    width: 600px;
+    height: 150px;
+    position: absolute;
+    top: 600px;
+    left: 950px;
+    border-radius: 200px;
+    box-shadow: 10px 10px rgba(0, 0, 0, 0.329);
+    padding: 10px 10px;
+    font-family: Ubuntu;
+    display: flex;
+    z-index: -1;
+}
+
+.imgPro {
+    width: 140px;
+    height: 140px;
+    border-radius: 200px;
+    border: 5px solid rgb(110, 110, 110);
+    position: relative;
+}
+
+.Myav {
+    position: relative;
+    left: 30px;
+    font-size: 40px;
+    bottom: 20px;
+    white-space: nowrap;
+}
+
+.text {
+    position: relative;
+    right: 150px;
+    top: 35px;
+    width: 700px;
+    white-space: wrap;
+}
+
+.hello {
+    background-color: rgb(48, 48, 48);
+    width: 300px;
+    height: 70px;
+    position: absolute;
+    z-index: 1;
+    border-radius: 100px;
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.329);
+    left: 400px;
+    bottom: 120px;
+    color: #ffffff;
+}
+
+.hi {
+    position: relative;
+    font-size: 40px;
+    left: 40px;
+    bottom: 20px;
+}
+
+/* Pinterest */
+
+.Pinterest {
+    background-color: rgb(48, 48, 48);
+    width: 300px;
+    height: 70px;
+    position: absolute;
+    z-index: 1;
+    border-radius: 100px;
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.329);
+    right: 100px;
+    bottom: 80px;
+}
+
+.Pinterest a {
+    position: relative;
+    font-size: 40px;
+    left: 30px;
+    bottom: 10px;
+    color: #ffffff;
+    font-family: ubuntu;
+}
+
+.pin {
+    fill: #ffffff;
+}
+
+.Pin {
+    position: relative;
+    top: 5px;
+    left: 5px;
 }
